--- a/Source/Menu/AppMenu.xib
+++ b/Source/Menu/AppMenu.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="23727" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23727"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,7 +8,7 @@
         <customObject id="-2" userLabel="File's Owner" customClass="Cleepp" customModule="Batch_Clipboard" customModuleProvider="target"/>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY" customClass="MenuHeaderView" customModule="Batch_Clipboard" customModuleProvider="target">
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY" customClass="FilterFieldView" customModule="Batch_Clipboard" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="296" height="28"/>
             <subviews>
                 <searchField wantsLayer="YES" focusRingType="none" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MmW-Nx-C7z">
@@ -45,7 +44,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <point key="canvasLocation" x="-106" y="373"/>
         </customView>
-        <menu title="Batch Clipboard" id="dqg-kI-Klz" customClass="CleeppMenu" customModule="Batch_Clipboard" customModuleProvider="target">
+        <menu title="Batch Clipboard" id="dqg-kI-Klz" customClass="AppMenu" customModule="Batch_Clipboard" customModuleProvider="target">
             <items>
                 <menuItem title="About Batch Clipboard…" tag="108" id="m9D-8J-nyc">
                     <modifierMask key="keyEquivalentModifierMask"/>
@@ -115,19 +114,19 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="JrS-zo-Haf"/>
-                <menuItem title="Placeholder Copy History Item" id="1hg-yO-AD0" customClass="HistoryMenuItem" customModule="Batch_Clipboard" customModuleProvider="target">
+                <menuItem title="Placeholder Copy History Item" id="1hg-yO-AD0" customClass="ClipMenuItem" customModule="Batch_Clipboard" customModuleProvider="target">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="copyFromHistory:" target="-2" id="dkX-Up-627"/>
                     </connections>
                 </menuItem>
-                <menuItem title="Placeholder Replay History Item" alternate="YES" id="u5y-6g-IID" customClass="HistoryMenuItem" customModule="Batch_Clipboard" customModuleProvider="target">
+                <menuItem title="Placeholder Replay History Item" alternate="YES" id="u5y-6g-IID" customClass="ClipMenuItem" customModule="Batch_Clipboard" customModuleProvider="target">
                     <modifierMask key="keyEquivalentModifierMask" option="YES"/>
                     <connections>
                         <action selector="replayFromHistory:" target="-2" id="BLU-IN-o9D"/>
                     </connections>
                 </menuItem>
-                <menuItem enabled="NO" id="pms-CA-OfJ" userLabel="Placeholder Anchor Item" customClass="HistoryMenuItem" customModule="Batch_Clipboard" customModuleProvider="target">
+                <menuItem enabled="NO" id="pms-CA-OfJ" userLabel="Placeholder Anchor Item" customClass="ClipMenuItem" customModule="Batch_Clipboard" customModuleProvider="target">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="replayFromHistory:" target="-2" id="srV-C0-AYl"/>
@@ -225,7 +224,7 @@ Shortcuts below only work while this menu is open.</string>
             </constraints>
             <point key="canvasLocation" x="-8" y="309"/>
         </customView>
-        <customView id="11V-7Q-FUf" customClass="MenuItemKeyDetectorView" customModule="Batch_Clipboard" customModuleProvider="target">
+        <customView id="11V-7Q-FUf" customClass="KeyDetectorView" customModule="Batch_Clipboard" customModuleProvider="target">
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <connections>
                 <outlet property="menuItem" destination="vGj-r1-rIx" id="3Gr-6X-14n"/>
