--- a/Source/Settings/AdvancedSettingsViewController.xib
+++ b/Source/Settings/AdvancedSettingsViewController.xib
@@ -21,7 +21,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vfL-pB-YIa">
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="vfL-pB-YIa">
             <rect key="frame" x="0.0" y="0.0" width="472" height="487"/>
             <subviews>
                 <button toolTip="Automatically remove all unpinned items before quitting the application." verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="O2y-qd-u6c">
@@ -61,7 +61,7 @@
                     <rect key="frame" x="26" y="312" width="420" height="56"/>
                     <textFieldCell key="cell" id="VHi-Vw-nEB">
                         <font key="font" metaFont="systemSemibold" size="11"/>
-                        <string key="title">With Clipboard History turned off (in the General settings panel) the app does not continually monitor the clipboard until you start collecting a batch. There is reduced need for these monitor disabling features, but they are still available.</string>
+                        <string key="title">With Clipboard History turned off (in the Storage settings panel) the app does not continually monitor the clipboard until you start collecting a batch. There is reduced need for these monitor disabling features, but they are still available.</string>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -69,7 +69,7 @@
                 <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="ahJ-Lm-rjm">
                     <rect key="frame" x="26" y="292" width="420" height="14"/>
                     <textFieldCell key="cell" title="You may wish to disable monitoring while copying sensitive data." id="Ejh-zi-AFs">
-                        <font key="font" metaFont="system" size="11"/>
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -77,7 +77,7 @@
                 <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="pW7-e8-4Mf">
                     <rect key="frame" x="26" y="258" width="420" height="28"/>
                     <textFieldCell key="cell" title="You can also disable by clicking the menu icon with ^⌥ pressed, and the same again to re-enable." id="54J-ir-wdI">
-                        <font key="font" metaFont="system" size="11"/>
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -85,7 +85,7 @@
                 <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="tCt-i9-YKv">
                     <rect key="frame" x="26" y="238" width="420" height="14"/>
                     <textFieldCell key="cell" title="To disable and then re-enable programmatically:" id="fjJ-ch-q05">
-                        <font key="font" metaFont="system" size="11"/>
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -104,7 +104,7 @@ defaults write lol.bananameter.batchclip ignoreEvents false</string>
                 <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="b73-sw-gL3">
                     <rect key="frame" x="26" y="157" width="420" height="28"/>
                     <textFieldCell key="cell" title="Or you can momentarily disable for just the next copy, click the menu with ^⌥⇧ pressed." id="lwS-2p-WwS">
-                        <font key="font" metaFont="system" size="11"/>
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -112,7 +112,7 @@ defaults write lol.bananameter.batchclip ignoreEvents false</string>
                 <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="Z0r-EQ-N1g">
                     <rect key="frame" x="26" y="137" width="420" height="14"/>
                     <textFieldCell key="cell" title="To momentarily disable for just the next copy programmatically:" id="9FD-O1-EeI">
-                        <font key="font" metaFont="system" size="11"/>
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
