--- a/Source/Settings/AppearanceSettingsViewController.xib
+++ b/Source/Settings/AppearanceSettingsViewController.xib
@@ -24,7 +24,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O1T-Uq-VLh">
+        <customView translatesAutoresizingMaskIntoConstraints="NO" id="O1T-Uq-VLh">
             <rect key="frame" x="0.0" y="0.0" width="562" height="430"/>
             <subviews>
                 <gridView xPlacement="leading" yPlacement="top" rowAlignment="firstBaseline" rowSpacing="8" columnSpacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="5KL-yT-3Zi">
@@ -158,11 +158,10 @@ Hint: Set to 16 to look like text items.</string>
                         <gridCell row="q6D-rb-X9G" column="KLa-7P-lgK" id="mmv-Uu-ROP"/>
                         <gridCell row="q6D-rb-X9G" column="7OC-Fv-eMr" id="eXr-mN-OvT">
                             <textField key="contentView" focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="tbz-WL-Agw">
-                                <rect key="frame" x="130" y="222" width="378" height="70"/>
+                                <rect key="frame" x="130" y="250" width="378" height="42"/>
                                 <textFieldCell key="cell" id="hEx-UI-54Z">
                                     <font key="font" metaFont="smallSystem"/>
-                                    <string key="title">The batch clipboard menu includes clipboard menu items, ie. menu items representing clips from a batch or from saved history. The above settings affect how clipboard menu items represeting images and text are displayed.
-</string>
+                                    <string key="title">The application's menu includes menu items representing clips from the current batch or from saved history. The above settings affect the display of those items for images and text clips.</string>
                                     <color key="textColor" name="systemGrayColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
@@ -170,7 +169,7 @@ Hint: Set to 16 to look like text items.</string>
                         </gridCell>
                         <gridCell row="NiR-EB-Xrn" column="KLa-7P-lgK" id="zZ5-X2-rET">
                             <textField key="contentView" focusRingType="none" horizontalHuggingPriority="1000" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="AH3-Nd-NhZ">
-                                <rect key="frame" x="-2" y="182" width="123" height="32"/>
+                                <rect key="frame" x="-2" y="210" width="123" height="32"/>
                                 <textFieldCell key="cell" alignment="right" title="Preview pop-up delay:" id="lnS-Rg-4sa">
                                     <font key="font" usesAppearanceFont="YES"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -180,7 +179,7 @@ Hint: Set to 16 to look like text items.</string>
                         </gridCell>
                         <gridCell row="NiR-EB-Xrn" column="7OC-Fv-eMr" id="Dy9-7o-54w">
                             <stackView key="contentView" toolTip="Delay until a preview popup is shown. Default: 1.5." distribution="fill" orientation="horizontal" alignment="top" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7SP-tN-nLD">
-                                <rect key="frame" x="132" y="179" width="348" height="21"/>
+                                <rect key="frame" x="132" y="207" width="348" height="21"/>
                                 <subviews>
                                     <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bWg-D5-ht1">
                                         <rect key="frame" x="0.0" y="0.0" width="96" height="21"/>
@@ -237,7 +236,7 @@ Hint: Set to 16 to look like text items.</string>
                         <gridCell row="WHt-13-Sv2" column="KLa-7P-lgK" id="YdG-xE-TUv"/>
                         <gridCell row="WHt-13-Sv2" column="7OC-Fv-eMr" id="5MC-mC-f8j">
                             <textField key="contentView" focusRingType="none" verticalHuggingPriority="100" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="qke-QM-Fwg">
-                                <rect key="frame" x="130" y="119" width="378" height="50"/>
+                                <rect key="frame" x="130" y="119" width="378" height="78"/>
                                 <textFieldCell key="cell" title="Hovering over a clipboard menu item will show a larger preview of it in a pop-up window." id="SRk-xb-FQ2">
                                     <font key="font" metaFont="smallSystem"/>
                                     <color key="textColor" name="systemGrayColor" catalog="System" colorSpace="catalog"/>
